k8s/base/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: cdrive
spec:
  selector:
    app: server
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
